[package]
name = "push"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tokio-tungstenite = "*"


[[bin]]
name = "push"
path = "src/bin/main.rs"

[[bin]]
name = "push_2"
path = "src/bin/main2.rs"
